    Thanks to Paul Cassella for preliminary patch. (Closes: #243980)
eevans:
  * Added a trap to invoke cleanup() when shell exits. Thanks to Marc
    Staveley for the patch. (Closes: #207795)
  * Changed interpreter from /bin/sh to /bin/bash
todd:
  * Added -t flag to logtail and logtail.8 - used in test mode - see man page
  * Added bash depends in debian/control - required by trap patch above

logcheck (1.2.18) unstable; urgency=low
  * New maintainer (Closes: #244271)
  * Updated debian/copyright with new upstream information. (Closes: #206022)
  * Updated sudo, oidentd rules.
  * Updated dhclient rules. (Closes: #202718) 
  * Updated ignore.d.server/ssh to match newest ssh logs. (Closes: #242217)
  * Updated cron, ssh, sudo, su rulefiles to recent PAM session logs. 
    (Closes: #241058, #242276, #243861)
  * Sync better package description with manpage intro.
  * Use standard ISO 8601 separator like "-" for date. (Closes: #226840)
  * Removed reference to old filename restriction. (Closes: #193485)
  * Better wording for -l switch. (Closes: #234383)
  * Added Files section in manpage.

 -- Todd Troxell <ttroxell@debian.org>  Friday, 23 Apr 2004 20:04:21 +0000

logcheck (1.2.17) unstable; urgency=low

  * Allow rules in ignore.d.violations to run regardless of filename
    prefix.  (Closes: #241236)  Patch from maximilian attems
  * Allow mail subjects to optionally qualify the reporting machines
    hostname.  (FQDN=[01])  (Closes: #241216)
  * Strip leading and trailing whitespace from log entries before
    processing them.  (Closes: #238513)
  * Added NTP rules.  (Closes: #222944)
  * Updated su rules. (Closes: #226838)

 -- Steve Kemp <skx@debian.org>  Wednesday, 01 Apr 2004 11:04:21 +0000

logcheck (1.2.16) unstable; urgency=low

  * Penultimate upload before the new perl revision homed at:
  		http://alioth.debian.org/projects/logcheck
    Volunteers and co-maintainers welcome, many thanks for the
    recent bug triaging by many people.