@@ -9,7 +9,7 @@ Build-Depends-Indep: debhelper (>= 4.1.13), python, docbook-to-man,
 
 Package: logcheck
 Architecture: all
-Depends: bash exim4 | mail-transport-agent, cron (>=3.0pl1-68), sysklogd | system-log-daemon, mailx, logtail (= ${Source-Version}), logcheck-database (= ${Source-Version}), debianutils (>= 1.16.9), lockfile-progs, ${misc:Depends} 
+Depends: adduser, bash, exim4 | mail-transport-agent, cron (>=3.0pl1-68), sysklogd | system-log-daemon, mailx, logtail (= ${Source-Version}), logcheck-database (= ${Source-Version}), debianutils (>= 1.16.9), lockfile-progs, ${misc:Depends} 
 Pre-Depends: logtail (>= 1.1.9.1)
 Suggests: syslog-summary
 Description: Mails anomalies in the system logfiles to the administrator
