@@ -23,6 +23,8 @@ case "$1" in
 	if [ -d /var/lib/logcheck ]; then
 	    rm -r /var/lib/logcheck
 	fi
+	# remove user and group
+	deluser --remove-home logcheck &>/dev/null || true
 	;;
 
     remove|upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)
